# ai-code-editor-cpp

./: CMakeLists.txt  README.md  build_windows.bat
resources/: resources.qrc
src/: aichatpanel.cpp  aichatpanel.h  aiservice.cpp  aiservice.h  codeeditor.cpp  codeeditor.h  compilerservice.cpp  compilerservice.h  main.cpp  mainwindow.cpp  mainwindow.h  syntaxhighlighter.cpp  syntaxhighlighter.h
